# MATA-Refreshed

./: VERSION_UPDATE_PROCESS.md  build-extension.js  build-extension.sh  chrome-extension-README.md  copy-wasm.js  fix_template_literals.js  manual-build.sh  package-lock.json  package.json  payment-dialog-temp.tsx  replit.nix  tailwind.config.ts  temp-did-functions.js  update-extension-version.js
chrome-extension/: CHANGELOG.md  background.js  contentScript.js  emailUtils.js  manifest.json  mataConfig.js  updateAllVersions.js  updateManifestVersion.js  versionConfig.browser.js  versionConfig.js
chrome-extension/popup/: popup.css  popup.html  popup.js  simplifiedGetUserData.js
client2/: index.html
crate/: Cargo.toml
crate/pkg/: mata_auth_wasm.d.ts  mata_auth_wasm.d.ts.backup  mata_auth_wasm.js.backup  mata_auth_wasm_bg.wasm  mata_auth_wasm_bg.wasm.d.ts  package.json
crate/src/: lib.rs
public/temp_extract/: CHANGELOG.md  SERVICE_WORKER_COMPATIBILITY.md  background.js  contentScript.js  manifest.json  mataConfig.js  versionConfig.browser.js
public/temp_extract/popup/: popup.html  popup.js  popup.js.bak
ref/popup/: popup.html  popup.js
server/: auth.ts  db.ts  extensionConfig.js  extensionConfig.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts
temp/: background.js  manifest.json
temp_build/: CHANGELOG.md  VERSION_UPDATE_README.md  contentScript.js  updateAllVersions.sh  versionConfig.js
temp_build/popup/: popup-comparison.css  popup.js
