[package]
name = "mata-auth-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = [
    "console",
]}
js-sys = "0.3.61"
getrandom = { version = "0.2.9", features = ["js"] }
p256 = { version = "0.11.1", features = ["ecdsa"] }
argon2 = "0.5.0"
aes-gcm = "0.10.1"
base64 = "0.21.0"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1